# Kunpeng-End-Cloud-Collaborative-Chinese-Voice-Assistant-Engine

./: README.md
Client/: CMakeLists.txt  README.md  main.cc
Client/Application/: Application.cc  Application.h  IntentsRegistry.cc  IntentsRegistry.h  StateConfig.cc  StateConfig.h  WS_Handler.cc  WS_Handler.h
Client/Application/UserIntents/: Light.cc  Light.h  RobotMove.cc  RobotMove.h
Client/Application/UserStates/: Fault.cc  Fault.h  Idle.cc  Idle.h  Listening.cc  Listening.h  Speaking.cc  Speaking.h  Startup.cc  Startup.h  Stop.cc  Stop.h  Thinking.cc  Thinking.h
Client/Audio/: AudioProcess.cc  AudioProcess.h
Client/Events/: EventQueue.h
Client/Hardware/: OledController.cc  gpio.cpp  gpio.h  oled_driver.cc  oled_driver.h  oled_smile.c
Client/Intent/: IntentHandler.cc  IntentHandler.h
Client/MOTORtest/: README.md  main.cpp
Client/StateMachine/: StateMachine.cc
Client/Utils/: user_log.h
Client/WebRTC/: WebRTCClient.cc  WebRTCClient.h
Client/WebSocket/: WebsocketClient.cc  WebsocketClient.h
Client/c_interface/: AIchat_c_interface.cc  AIchat_c_interface.h  CMakeLists.txt  test.c
Qihang Echo/Client/: CMakeLists_1.txt  README_1.md  main_1.cc  toolchain.cmake
Qihang Echo/Client/Events/: AppEvents_1.h
Qihang Echo/Client/Hardware/: OledController.cc  OledController_1.h  motor.cpp  oled_app.c  oled_driver_1.cc  oled_idle_1.c  oled_listening.c  oled_speaking_1.c  oled_thinking.c
Qihang Echo/Client/Intent/: IntentHandler_1.h
Qihang Echo/Client/StateMachine/: StateMachine.h
Qihang Echo/Client/Utils/: affinity_1.h  user_log_1.h
Qihang Echo/Client/WebRTC/: WebRTCClient.h  WebRTCClient_1.cc
Qihang Echo/Client/WebSocket/: WebsocketClient.h
Qihang Echo/Client/scripts/: run_client_affinity_1.sh
Qihang Echo/Server/: README_1.md  debug_llm_1.py  main.py  main_webrtc.py  requirements_1.txt  service_manager_1.py  webrtc_server_1.py
Qihang Echo/Server/config/: .settings.py_1.swp  settings_1.py
Qihang Echo/Server/handle/: audio_handler_1.py  auth_handler.py  text_handler.py
Qihang Echo/Server/models/: asr_model_1.py  asr_model_npu_1.py  llm_model.py  local_llm_qwen_ascend_om.py  tts_model_1.py  vad_model.py
Qihang Echo/Server/reports/affinity_compare/: affinity_compute_1.json  baseline_compute.json
Qihang Echo/Server/scripts/: download_asr_models.sh  export_quant_onnx.py  export_sensevoice_onnx_1.py  setup_npu_env.sh
Qihang Echo/Server/services/: asr_service_1.py  chat_service.py  intent_service.py  tts_service_1.py  vad_service.py
Qihang Echo/Server/test/: asr_test.py  audio_play_1.py  audio_trans_1.py  benchmark_asr_cpu.py  benchmark_asr_results_1.json  benchmark_memory.py  benchmark_onnxfp32_results_1.json  chat_tts_test.py  plot_benchmark.py  tts_quality_test.py
Qihang Echo/Server/threads/: audio_send_thread_1.py  llm_worker.py  task_manager_1.py  tts_thread.py
Qihang Echo/Server/tools/: .affinity_benchmark.py.swp  affinity.py  affinity_benchmark.py  affinity_plot_1.py  audio_processor_1.py  diag.py  logger_1.py  noise_worker_1.py  numa_mem_bench.py  numa_mem_plot_1.py  perf_check.py
Qihang Echo/llm_ascend_poc/: README.md
Qihang Echo/llm_ascend_poc/notes/: 02_model_convert_and_serve_1.md
Qihang Echo/llm_ascend_poc/scripts/: 00_collect_sysinfo.sh  00_run_acl_smoke_1.sh  01_acl_smoke_test_1.py  02_check_npu_runtime_1.sh  03_collect_npu_logs_1.sh  10_openai_compat_client.py  benchmark_dashscope.py  benchmark_om_1.py  chat_om.py  chat_qwen.py  diagnose_om_1.py  export_qwen25_3b_onnx_1.py  gen_atc_cmd.py  gen_atc_cmd_0.5b.py  inspect_onnx_1.py  test_onnx_inference.py  test_pytorch_inference_1.py  test_single_om.py
Server/: PPT_Draft.md  README.md  WEBRTC_MIGRATION.md  benchmark_asr.py  debug_llm.py  main.py  main_webrtc.py  requirements.txt  service_manager.py  webrtc_server.py  ws_server.py
Server/config/: settings.py
Server/handle/: audio_handler.py  auth_handler.py  text_handler.py
Server/models/: asr_model.py  asr_model_npu.py  llm_model.py  tts_model.py  vad_model.py
Server/scripts/: export_sensevoice_onnx.py
Server/services/: asr_service.py  chat_service.py  intent_service.py  vad_service.py
Server/test/: benchmark_asr_cpu.py  benchmark_memory.py  chat_test.py  plot_benchmark.py  tts_test.py  vad_test.py  vad_test1.pcm  vad_test2.pcm
Server/threads/: audio_send_thread.py
Server/tools/: audio_processor.py  diag.py  registry.py  tls.py
(+16 files in other folders)
